# ts_dream

./: .gitignore  Jenkinsfile  Jenkinsfile.conda  README.rst  SConstruct  pyproject.toml  setup.cfg  setup.py
conda/: meta.yaml
doc/: conf.py  index.rst  manifest.yaml  version-history.rst  version_history.rst
doc/configuration/: configuration.rst
doc/developer-guide/: developer-guide.rst
doc/lsst.ts.dream/: index.rst
doc/news/: OSW-1138.feature.rst  OSW-1160.bugfix.rst  OSW-1787.bugfix.rst  OSW-1824.bugfix.rst  OSW-2148.bugfix.rst  OSW-730.feature.rst  OSW-753.bugfix.rst  OSW-769.feature.rst  README.rst
doc/user-guide/: user-guide.rst
python/lsst/ts/dream/: __init__.py  config_schema.py  dream_csc.py
python/lsst/ts/dream/csc/: __init__.py  config_schema.py  dream_csc.py  dream_status_schema.yaml  status_topics_builder.py
python/lsst/ts/dream/csc/mock/: __init__.py  dream_mock_http.py  mock_dream.py  mock_ess.py
python/lsst/ts/dream/csc/model/: __init__.py  dream_model.py
python/lsst/ts/dream/mock/: __init__.py  mock_dream.py
schema/: new_data_products.jsonschema  telemetry.jsonschema  weather_info.jsonschema
tests/: test_dream_csc.py  test_dream_model.py  test_mock_dream.py
tests/config/: _init.yaml  _test.yaml  use_precipitation.yaml
ups/: ts_dream.table
