[build-system]
requires = ["setuptools>=45", "setuptools-scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "ts-dream"
description = "DREAM camera CSC."
license = { text = "GPL" }
classifiers = [ "Programming Language :: Python :: 3" ]
urls = { documentation = "https://ts-dream.lsst.io", source_code = "https://github.com/lsst-ts/ts_dream" }
dynamic = ["version"]
dependencies = [
    "ts_tcpip",
]

[tool.setuptools.dynamic]
version = { attr = "setuptools_scm.get_version" }

[tool.setuptools.packages.find]
where = [ "python" ]

[project.scripts]
run_dream = "lsst.ts.dream.csc:run_dream"

[tool.setuptools_scm]


[tool.pytest.ini_options]
asyncio_mode = "auto"

[project.optional-dependencies]
dev = ["documenteer[pipelines]"]
